First letter in sidebar menu should be capital letter

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,8 +25,8 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">blog source</a>
-    <span class="sidebar-nav-item">blog v{{ site.version }}</span>
+    <a class="sidebar-nav-item" href="{{ site.github.repo }}">Blog source</a>
+    <span class="sidebar-nav-item">Blog v{{ site.version }}</span>
   </nav>
 
   <div class="sidebar-item">
